<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grid_background"
    tools:context=".ui.MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_500"
        android:title="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleCentered="true" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/crosswordGrid"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toTopOf="@+id/clueContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topAppBar"
        tools:listitem="@layout/item_crossword_cell" />

    <LinearLayout
        android:id="@+id/clueContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical"
        android:background="@color/white"
        android:padding="16dp"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/acrossHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clue_header_across"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/acrossClues"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            tools:listitem="@layout/item_clue" />

        <TextView
            android:id="@+id/downHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clue_header_down"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/downClues"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/item_clue" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/hintButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_hint"
        app:icon="@android:drawable/ic_menu_help"
        app:layout_constraintBottom_toBottomOf="@id/topAppBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/topAppBar"
        app:layout_constraintVertical_bias="0.5"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/checkButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_check"
        app:icon="@android:drawable/ic_menu_info_details"
        app:layout_constraintBottom_toBottomOf="@id/topAppBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/topAppBar"
        app:layout_constraintVertical_bias="0.5"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
